--- a/gradle.properties
+++ b/gradle.properties
@@ -1,18 +1,9 @@
-# gradle stuff
-    org.gradle.jvmargs=-Xmx3G
-    org.gradle.parallel=true
-    org.gradle.caching=true
-    # uncomment this is gradle doesn't want to use more workers
-    #org.gradle.workers.max=4
-# Quilt Properties
-    # check these on https://lambdaurora.dev/tools/import_quilt.html
-    minecraft_version=1.18.2
-    quilt_mappings=22
-    loader_version=0.16.0-beta.7
+# Gradle Properties
+org.gradle.jvmargs = -Xmx1G
+org.gradle.parallel = true
+org.gradle.caching = true
+
 # Mod Properties
-    version=1.0.0
-    maven_group=com.example
-    archives_base_name=example-mod
-# Dependencies
-    qsl_version=1.1.0-beta.2+1.18.2
-    quilted_fapi_version=1.0.0-beta.5+0.48.0
+version = 1.0.0
+maven_group = com.example
+archives_base_name = example_mod
