--- a/settings.gradle
+++ b/settings.gradle
@@ -1,9 +1,23 @@
 pluginManagement {
-	repositories {
-		maven { url 'https://maven.fabricmc.net' }
-		maven { url 'https://maven.quiltmc.org/repository/release' }
-		maven { url 'https://maven.quiltmc.org/repository/snapshot' }
-		gradlePluginPortal()
-		mavenCentral()
-	}
+    repositories {
+        maven {
+            name = 'Quilt'
+            url = 'https://maven.quiltmc.org/repository/release'
+        }
+        maven {
+            name = 'Quilt Snapshot'
+            url = 'https://maven.quiltmc.org/repository/snapshot'
+        }
+		// Currently needed for Intermediary and other temporary dependencies
+        maven {
+            name = 'Fabric'
+            url = 'https://maven.fabricmc.net/'
+        }
+		// Temporarily required until we update Loom Quiltflower
+		maven {
+            name = 'Cotton'
+            url = 'https://server.bbkr.space/artifactory/libs-release/'
+        }
+        gradlePluginPortal()
+    }
 }
