Manually apply changes

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -18,4 +18,4 @@ quilted_fabric_api = { module = "org.quiltmc.quilted-fabric-api:quilted-fabric-a
 # example = ["example-a", "example-b", "example-c"]
 
 [plugins]
-quilt_loom = { id = "org.quiltmc.loom", version = "0.12-SNAPSHOT" }
+quilt_loom = { id = "org.quiltmc.loom", version = "0.12.+" }
