Add a helpful migration note, changes

--- a/gradle.properties
+++ b/gradle.properties
@@ -7,3 +7,5 @@ org.gradle.caching = true
 version = 1.0.0
 maven_group = com.example
 archives_base_name = example_mod
+
+# Dependencies are managed at gradle/libs.versions.toml
