--- a/build.gradle
+++ b/build.gradle
@@ -15,7 +15,7 @@ repositories {
 	// for more information about repositories.
 }
 
-// All the dependencies are declared at "./gradle/libs.version.toml" and referenced with "libs.<id>"
+// All the dependencies are declared at gradle/libs.version.toml and referenced with "libs.<id>"
 // See https://docs.gradle.org/current/userguide/platforms.html for information on how version catalogs work.
 dependencies {
 	minecraft libs.minecraft
