--- a/build.gradle
+++ b/build.gradle
@@ -41,7 +41,7 @@ processResources {
 tasks.withType(JavaCompile).configureEach {
 	it.options.encoding = "UTF-8"
 	// Minecraft 1.18 (1.18-pre2) upwards uses Java 17.
-	it.options.release.set(17)
+	it.options.release = 17
 }
 
 java {
