Add Minecraft version tag to version
Must encourage good practices

--- a/gradle.properties
+++ b/gradle.properties
@@ -3,7 +3,7 @@ org.gradle.jvmargs = -Xmx1G
 org.gradle.parallel = true
 
 # Mod Properties
-version = 1.0.0
+version = 1.0.0+1.18.2
 maven_group = com.example
 archives_base_name = example_mod
 
