--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,10 +1,10 @@
 [versions]
 # The latest versions are available at https://lambdaurora.dev/tools/import_quilt.html
 minecraft = "1.18.2"
-quilt_mappings = "1.18.2+build.23"
-quilt_loader = "0.16.0-beta.16"
+quilt_mappings = "1.18.2+build.24"
+quilt_loader = "0.17.0"
 
-quilted_fabric_api = "1.0.0-beta.13+0.51.1-1.18.2"
+quilted_fabric_api = "1.0.0-beta.20+0.55.1-1.18.2"
 
 [libraries]
 minecraft = { module = "com.mojang:minecraft", version.ref = "minecraft" }
