Automatically append Minecraft version to mod version

--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ plugins {
 }
 
 archivesBaseName = project.archives_base_name
-version = project.version
+version = "${project.version}+${libs.versions.minecraft.get()}"
 group = project.maven_group
 
 repositories {
