Add gametest setup

--- a/build.gradle
+++ b/build.gradle
@@ -69,6 +69,36 @@ jar {
 	}
 }
 
+// Gametest stuff
+sourceSets {
+	gametest {
+		compileClasspath += sourceSets.main.compileClasspath
+		runtimeClasspath += sourceSets.main.runtimeClasspath
+		compileClasspath += sourceSets.main.output
+		runtimeClasspath += sourceSets.main.output
+	}
+}
+
+loom {
+	runs {
+		gametest {
+			server()
+			name = "Headless Game Test Server"
+			vmArg "-Dfabric-api.gametest"
+			runDir "build/gametest"
+			source = project.sourceSets.gametest
+		}
+
+		gametestClient {
+			client()
+			name = "Game Test Client"
+			source = project.sourceSets.gametest
+		}
+	}
+}
+
+test.dependsOn runGametest
+
 // Configure the maven publication
 publishing {
 	publications {
