Use ${group} in quilt.mod.json

--- a/build.gradle
+++ b/build.gradle
@@ -36,10 +36,8 @@ dependencies {
 }
 
 processResources {
-	inputs.property 'version', version
-
 	filesMatching('quilt.mod.json') {
-		expand "version": version
+		expand 'version': version, 'group': project.group
 	}
 }
 
