--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,7 @@ plugins {
 	alias libs.plugins.quilt.loom
 }
 
-archivesBaseName = project.archives_base_name
+base.archivesName = project.archives_base_name
 version = "${project.version}+${libs.versions.minecraft.get()}"
 group = project.maven_group
 
