Fix one last usage of GString

--- a/build.gradle
+++ b/build.gradle
@@ -39,7 +39,7 @@ processResources {
 	inputs.property 'version', version
 
 	filesMatching('quilt.mod.json') {
-		expand "version": version
+		expand 'version': version
 	}
 }
 
