--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,10 +1,10 @@
 [versions]
 # The latest versions are available at https://lambdaurora.dev/tools/import_quilt.html
-minecraft = "1.19.4"
-quilt_mappings = "1.19.4+build.10"
+minecraft = "1.20"
+quilt_mappings = "1.20+build.1"
 quilt_loader = "0.18.10"
 
-quilted_fabric_api = "6.0.0-beta.9+0.83.0-1.19.4"
+quilted_fabric_api = "7.0.1+0.83.0-1.20"
 
 [libraries]
 minecraft = { module = "com.mojang:minecraft", version.ref = "minecraft" }
