--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,19 @@ repositories {
 	// for more information about repositories.
 }
 
+loom {
+	// Loom and Loader use this block to gather more information about your mod.
+	mods {
+		// This should match your mod's mod id.
+		"example_mod" {
+			// Tell Loom about each source set used by your mod here. This ensures that your mod's classes are properly transformed by Loader.
+			sourceSet("main")
+			// If you shade (directly include classes, not JiJ) a dependency into your mod, include it here using one of these methods:
+			//dependency("com.example.shadowedmod:1.2.3")
+			//configuration("exampleShadedConfigurationName")
+		}
+	}
+}
 // All the dependencies are declared at gradle/libs.version.toml and referenced with "libs.<id>"
 // See https://docs.gradle.org/current/userguide/platforms.html for information on how version catalogs work.
 dependencies {
