Review the changes post-commit

--- a/build.gradle
+++ b/build.gradle
@@ -19,18 +19,19 @@ repositories {
 }
 
 loom {
-	// Loom and Loader use this block to gather more information about your mod.
+	// Loom and Loader both use this block in order to gather more information about your mod.
 	mods {
-		// This should match your mod's mod id.
+		// This should match your mod id.
 		"example_mod" {
 			// Tell Loom about each source set used by your mod here. This ensures that your mod's classes are properly transformed by Loader.
 			sourceSet("main")
 			// If you shade (directly include classes, not JiJ) a dependency into your mod, include it here using one of these methods:
-			//dependency("com.example.shadowedmod:1.2.3")
-			//configuration("exampleShadedConfigurationName")
+			// dependency("com.example.shadowedmod:1.2.3")
+			// configuration("exampleShadedConfigurationName")
 		}
 	}
 }
+
 // All the dependencies are declared at gradle/libs.version.toml and referenced with "libs.<id>"
 // See https://docs.gradle.org/current/userguide/platforms.html for information on how version catalogs work.
 dependencies {
