remake #27 for latest

--- a/build.gradle
+++ b/build.gradle
@@ -53,10 +53,10 @@ dependencies {
 }
 
 processResources {
-	inputs.property 'version', version
+	inputs.properties 'version': version, 'group': project.group
 
 	filesMatching('quilt.mod.json') {
-		expand 'version': version
+		expand 'version': version, 'group': project.group
 	}
 }
 
