--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,12 +1,12 @@
 [versions]
 # The latest versions are available at https://lambdaurora.dev/tools/import_quilt.html
-minecraft = "1.20.1"
+minecraft = "1.20.2"
 loom = "1.4.1"
 
-quilt_mappings = "1.20.1+build.23"
-quilt_loader = "0.21.0"
+quilt_mappings = "1.20.2+build.3"
+quilt_loader = "0.23.1"
 
-quilted_fabric_api = "7.4.0+0.90.0-1.20.1"
+quilted_fabric_api = "8.0.0-alpha.3+0.91.2-1.20.2"
 
 [libraries]
 minecraft = { module = "com.mojang:minecraft", version.ref = "minecraft" }
